# os_lab_2

./: CMakeLists.txt
include/: arrayProcessor.h
src/: CMakeLists.txt  arrayProcessor.cpp  main.cpp
tests/: CMakeLists.txt  test_arrayProcessor.cpp
